feat: update customer module with new command and query structures, enhance authentication requests, and improve frontend styles
- Renamed client-related classes and commands to customer for consistency.
- Introduced new commands for changing customer email and password.
- Updated authentication request classes for clarity.
- Added new CSS files for improved styling and layout in the frontend.
- Removed obsolete style.css and organized styles into modular files for better maintainability.